--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-😎
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Programming Blog</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Programming Blog</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Blog Post Title</h2>
+        <p>Here is some content for a blog post. It will be styled with lime green text on a dark grey background.</p>
+        <h3>Code Example:</h3>
+        <pre><code>
+function sayHello() {
+    console.log("Hello, world!");
+}
+        </code></pre>
+        <p>Some more content goes here.</p>
+    </main>
+
+    <footer>
+        <p>© 2023 Your Programming Blog</p>
+    </footer>
+</body>
+</html>
