--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Programming Blog</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Your Programming Blog</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Programming Blog</h1>
+    <header class="container">
+        <h1>Your Programming Blog</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -16,19 +16,23 @@
         </nav>
     </header>
 
-    <main>
-        <h2>Blog Post Title</h2>
-        <p>Here is some content for a blog post. It will be styled with lime green text on a dark grey background.</p>
-        <h3>Code Example:</h3>
-        <pre><code>
+    <main class="container">
+        <article>
+            <h2>Blog Post Title</h2>
+            <p>Here is some content for your blog post. It will be styled with lime green text on a dark grey background.</p>
+            <h3>Code Example:</h3>
+            <pre><code>
 function sayHello() {
     console.log("Hello, world!");
 }
-        </code></pre>
-        <p>Some more content goes here.</p>
+            </code></pre>
+            <p>Some more content goes here.</p>
+        </article>
+
+        <!-- Add more articles as needed -->
     </main>
 
-    <footer>
+    <footer class="container">
         <p>© 2023 Your Programming Blog</p>
     </footer>
 </body>
