--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,14 +8,14 @@
     <meta name="author" content="Adam Drewery">
 
     <title>blog</title>
-    <base href="/" />
-    <link href="/images/favicon.ico" rel="shortcut icon">
+    <base href="" />
+    <link href="images/favicon.ico" rel="shortcut icon">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,700" rel="stylesheet">
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/metismenu.min.css" rel="stylesheet" type="text/css"/>
-    <link href="/css/materialdesignicons.min.css" rel="stylesheet" type="text/css">
-    <link href="/css/style.css" rel="stylesheet" type="text/css"/>
-    <link href="/css/default.css" rel="stylesheet" type="text/css"/>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/metismenu.min.css" rel="stylesheet" type="text/css"/>
+    <link href="css/materialdesignicons.min.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="css/default.css" rel="stylesheet" type="text/css"/>
 
 </head>
 
