--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Adam Drewery">
 
     <title>blog</title>
-    <base href="" />
+    <base href="/" />
     <link href="images/favicon.ico" rel="shortcut icon">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,700" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
