--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Adam Drewery's Blog">
     <meta name="author" content="Adam Drewery">
 
-    <title>blog</title>
+    <title>blog.</title>
     <base href="/" />
     <link href="images/favicon.ico" rel="shortcut icon">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,700" rel="stylesheet">
