--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,44 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Adam Drewery's Blog">
     <meta name="author" content="Adam Drewery">
-
     <title>blog.</title>
     <base href="/">
     <link href="/images/favicon.ico" rel="shortcut icon">
-    <link href="/https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,700" rel="stylesheet">
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/metismenu.min.css" rel="stylesheet" type="text/css"/>
     <link href="/css/materialdesignicons.min.css" rel="stylesheet" type="text/css">
     <link href="/css/style.css" rel="stylesheet" type="text/css"/>
     <link href="/css/default.css" rel="stylesheet" type="text/css"/>
-
+    <link href="/css/highlight.min.css" rel="stylesheet" type="text/css"/>
+    <link href="css/code.css" rel="stylesheet">
 </head>
-
 <body>
-<!-- Begin page -->
 <div id="wrapper">
     <div id="app">
-<!--        <svg class="loading-progress">-->
-<!--            <circle r="40%" cx="50%" cy="50%"/>-->
-<!--            <circle r="40%" cx="50%" cy="50%"/>-->
-<!--        </svg>-->
-<!--        <div class="loading-progress-text"></div>-->
     </div>
-
-<!--    <div id="blazor-error-ui">-->
-<!--        An unhandled error has occurred.-->
-<!--        <a href="/" class="reload">Reload</a>-->
-<!--        <a class="dismiss">🗙</a>-->
-<!--    </div>-->
-        
-    <!--suppress HtmlUnknownTarget -->
     <script src="/_framework/blazor.webassembly.js"></script>
-
+    <script src="/js/highlight.min.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
@@ -49,3 +32,8 @@
 </body>
 
 </html>
+<script>
+    window.highlightCode = () => {
+        hljs.highlightAll();
+    };
+</script>
