Tidy up a bit, start on pagination and rss

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/">
+    <title>blog.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Adam Drewery's Blog">
     <meta name="author" content="Adam Drewery">
-    <title>blog.</title>
-    <base href="/">
     <link href="/images/favicon.ico" rel="shortcut icon">
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/metismenu.min.css" rel="stylesheet" type="text/css"/>
@@ -27,13 +27,7 @@
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/jquery.easing.min.js"></script>
     <script src="/js/metisMenu.min.js"></script>
-    <script src="/js/jquery.app.js"></script>
+    <script src="/js/app.js"></script>
 </div>
 </body>
-
 </html>
-<script>
-    window.highlightCode = () => {
-        hljs.highlightAll();
-    };
-</script>
