--- a/site/wwwroot/index.html
+++ b/site/wwwroot/index.html
@@ -22,6 +22,7 @@
     </div>
     <script src="/_framework/blazor.webassembly.js"></script>
     <script src="/js/highlight.min.js"></script>
+    <script src="/js/utterances.min.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
