--- a/site/wwwroot/index.html
+++ b/site/wwwroot/index.html
@@ -28,6 +28,7 @@
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/jquery.easing.min.js"></script>
     <script src="/js/metisMenu.min.js"></script>
+    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]=EMAIL;ftypes[0]=merge;,fnames[1]=FNAME;ftypes[1]=merge;,fnames[2]=LNAME;ftypes[2]=merge;,fnames[3]=ADDRESS;ftypes[3]=merge;,fnames[4]=PHONE;ftypes[4]=merge;false}(jQuery));var $mcj = jQuery.noConflict(true);</script>
     <script src="/js/app.js"></script>
 </div>
 </body>
